feat: rebase packages + improve Dockerfile